--- a/AzureIot/EchoBackend/EchoBackend.csproj
+++ b/AzureIot/EchoBackend/EchoBackend.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.EventHubs" Version="5.1.0" />
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.21.0" />
   </ItemGroup>
 
 </Project>
