--- a/AzureIot/SimulatedDevice/SimulatedDevice.csproj
+++ b/AzureIot/SimulatedDevice/SimulatedDevice.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.26.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="sample-image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
