--- a/AzureIot/AutoProvisionedDevice/AutoProvisionedDevice.csproj
+++ b/AzureIot/AutoProvisionedDevice/AutoProvisionedDevice.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Client" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Mqtt" Version="1.3.0" />
+  </ItemGroup>
+
 </Project>
