--- a/AzureIot/AutoProvisionedDevice/AutoProvisionedDevice.csproj
+++ b/AzureIot/AutoProvisionedDevice/AutoProvisionedDevice.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.26.0" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Client" Version="1.6.0" />
     <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Mqtt" Version="1.3.0" />
   </ItemGroup>
